RESOLVED FIXED54776
Plugin snapshot location is wrong for subframes
https://bugs.webkit.org/show_bug.cgi?id=54776
Summary Plugin snapshot location is wrong for subframes
Simon Fraser (smfr)
Reported 2011-02-18 15:15:48 PST
The plugin snapshot is drawing in the wrong location in subframes.
Attachments
Patch (2.81 KB, patch)
2011-02-18 15:22 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2011-02-18 15:22:25 PST
Simon Fraser (smfr)
Comment 2 2011-02-18 15:24:39 PST
Simon Fraser (smfr)
Comment 3 2011-02-18 15:28:35 PST
Note You need to log in before you can comment on or make changes to this bug.