2011-02-18  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Plugin snapshot location is wrong for subframes
        https://bugs.webkit.org/show_bug.cgi?id=54776

        Only change the CTM to the way that the plugin expects it
        when painting the plugin, not when drawing the snapshot.
        This fixes the snapshot location when painting flattened
        frames.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::paint):

Canonical link: https://commits.webkit.org/68995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79040 268f45cc-cd09-0410-ab3c-d52691b4dbfc